<resources>


    <string name="app_name">E-Voting</string>
    <string name="FCM_PREF"> com.se.httpwww.se.fcm_pref</string>
    <string name="FCM_TOKEN">com.se.httpwww.se.fcm_token</string>

    <string name="title_activity_navigation">Navigation</string>

    <string name="title_activity_pass">Password</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_cart">E-Voting</string>

    <string name="ip">192.168.8.104</string>


    <string name="title_activity_registeration">Registration</string>
    <string name="title_activity_login">E-Voting</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>

    <string name="reactive">This service is inaccessible now. It is accessible from 12pm to 10pm. Thank you for your support. Keep using EZSaman. #AbEasyHaiSab </string>

    <string name="create">Registration</string>

    <string name="name">Username</string>
    <string name="pas">Password</string>
    <string name="repas">Retype Password</string>
    <string name="email">Enter CNIC</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="contact">Contact</string>
    <string name="try_again">Reconnect</string>
    <string name="title_activity_main_page">Vote</string>


</resources>
