<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:id="@+id/r2"
android:background="@color/background"
tools:context="com.se.httpwww.se.Register"
    >

    <ImageView
        android:id="@+id/signup"
        android:layout_centerHorizontal="true"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:gravity="center"/>




<com.joanzapata.iconify.widget.IconTextView
    android:id="@+id/iconfullname"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:text="{fa-user #062136}"
    android:layout_marginLeft="20dp"


    android:textSize="25sp"

    android:layout_below="@+id/signup"
    android:paddingTop="11dp"
    android:paddingLeft="11dp"
    android:paddingRight="11.5dp"
    android:paddingBottom="11.5dp"
    android:background="@drawable/roundicons"/>
<EditText
    android:id="@+id/fullname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Enter Fullname"
    android:padding="10dp"
    android:layout_marginLeft="-2sp"
    android:layout_marginRight="20dp"

    android:layout_toRightOf="@+id/iconfullname"
    android:layout_below="@+id/signup"
    android:inputType="textEmailAddress"
    android:background="@drawable/roundeditstates"

    />




<com.joanzapata.iconify.widget.IconTextView
    android:id="@+id/iconemail"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:text="{fa-envelope #062136}"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:textSize="25sp"
    android:layout_below="@+id/fullname"
    android:paddingTop="11dp"
    android:paddingLeft="11dp"
    android:paddingRight="11.5dp"
    android:paddingBottom="11.5dp"
    android:background="@drawable/roundicons"/>
<EditText
    android:id="@+id/name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Enter CNIC"
    android:padding="10dp"
    android:layout_marginLeft="-2sp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    android:layout_toRightOf="@+id/iconemail"
    android:layout_below="@+id/fullname"
    android:inputType="text"
    android:background="@drawable/roundeditstates"
    />


<com.joanzapata.iconify.widget.IconTextView
    android:id="@+id/iconpas"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:text="{fa-unlock-alt #062136}"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/roundicons"
    android:textSize="24sp"

    android:layout_below="@+id/name"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingLeft="12dp"
    android:paddingRight="15.5dp"/>

<EditText
    android:id="@+id/pass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/pas"
    android:inputType="textPassword"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="-2sp"
    android:layout_below="@+id/name"
    android:layout_toRightOf="@+id/iconpas"
    android:background="@drawable/roundeditstates"
    android:padding="10dp"
    />




    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/iconrepas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="{fa-unlock-alt #062136}"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundicons"
        android:textSize="24sp"

        android:layout_below="@+id/pass"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="15.5dp"/>

    <EditText
        android:id="@+id/repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repas"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="-2sp"
        android:layout_below="@+id/pass"
        android:layout_toRightOf="@+id/iconrepas"
        android:background="@drawable/roundeditstates"
        android:padding="10dp"
        />


    <com.joanzapata.iconify.widget.IconTextView
    android:id="@+id/iconcont"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:text="{fa-phone #062136}"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/roundicons"
    android:textSize="26sp"
    android:paddingRight="6dp"
    android:layout_below="@+id/repass"
    android:padding="12dp"
    android:paddingBottom="-3dp"/>

<EditText
    android:id="@+id/contact"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Enter Contact"
    android:inputType="number"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_below="@+id/repass"
    android:layout_toRightOf="@+id/iconcont"
    android:background="@drawable/roundeditstates"
    android:padding="10dp"/>



    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/iconmyemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="{fa-unlock-alt #062136}"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/roundicons"
        android:textSize="24sp"

        android:layout_below="@+id/contact"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="15.5dp"/>

    <EditText
        android:id="@+id/myemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="-2sp"
        android:layout_below="@+id/contact"
        android:layout_toRightOf="@+id/iconmyemail"
        android:background="@drawable/roundeditstates"
        android:padding="10dp"
        />



<Button

    android:id="@+id/lin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/signup"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="40dp"
    android:layout_below="@id/myemail"
    android:textSize="18dp"
    android:textAllCaps="false"
    android:layout_marginLeft="20dp"
    android:layout_centerInParent="true"
    android:layout_marginRight="20dp"
    android:background="@drawable/buttonshape"
    android:textColor="@color/black"/>


</RelativeLayout>

